welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:5: error: ';' expected but ',' found.
      return nums[i],i
                    ^